"Added User Controller , updated routes and add swagger some of endpoints"
