# src/routes/index.js
@@ -8,6 +8,8 @@ const router = require("express").Router();
 
 // Auth:
 router.use("/auth", require("./auth"));
+// Users:
+router.use("/users", require("./user"));
 // Blogs:
 router.use("/blogs", require("./blog"));
 // Blogs:
